--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -24,14 +24,15 @@
 
 /* Individual image sizes */
 .intro_image_1 {
-  width: 100%;
+  width: 650px;
   height: 200px;
   object-fit: cover;
   margin-top: 20px;
+  margin-left: 0px;
 }
 
 .intro_image_2 {
-  width: 100%;
+  width: 650px;
   height: 250px;
   object-fit: cover;
   margin-top: 20px;
@@ -39,10 +40,10 @@
 
 /* Increased size for the third image */
 .intro_image_3 {
-  width: 70%;
+  width: 100%;
   height: 300px; /* Increased height */
   object-fit: cover;
-  margin-top: 50px; /* Adds some spacing above the image */
+  margin-top: -10px; /* Adds some spacing above the image */
 }
 
 /* Responsive adjustments */
