update navbar dropdown

--- a/src/components/Common/Header/header.css
+++ b/src/components/Common/Header/header.css
@@ -20,9 +20,9 @@
   color: #007bff;
 }
 
-.navbar-nav .nav-link.active {
+/* .navbar-nav .nav-link.active {
   color: #007bff;
-}
+} */
 
 /* Adjust E-SYSTEM button for mobile */
 .navbar .btn-warning {
