--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -27,18 +27,30 @@
   margin: 0 auto; /* Center the container within the page */
   flex-wrap: wrap; /* Allow wrapping on smaller screens */
 }
+/* General Swiper Styles */
+.services-swiper {
+  width: 80%;
+  padding: 20px 0;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: auto;
+}
 
 .service {
-  flex: 1;
-  max-width: 30%; /* Ensure each service takes up a proportionate width */
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   padding: 20px;
-  box-sizing: border-box;
-  border: 3px solid transparent; /* Default border style */
+  background-color: #221f45;
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-
 
 /* Specific borders for each service */
 .service:nth-child(1) {
@@ -65,36 +77,38 @@
   margin-bottom: 10px;
 }
 
+.service img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
 .service h3 {
   font-size: 18px;
+  color: #ffc000;
   margin-bottom: 10px;
-  color: #000;
-  border-width: 0;
-  border-style: solid;
-  border-color: #ffffff;
-  padding: 10px;
-  margin: 0 auto;
-  background-color: #ffffff;
-  width: 250px;
 }
 
 .service p {
-  text-align: center;
-  color: #ffffff;
+  font-size: 14px;
+  color: #fff;
   margin-bottom: 15px;
-  margin-top: 15px;
 }
 
 .service button {
   padding: 10px 20px;
   background-color: #ffc000;
-  color: #000000;
+  color: #000;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 
 .service button:hover {
-  background-color: #ffffff;
+  background-color: #fff;
+  color: #000;
 }
 
 /* Responsive Design */
