--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -1,14 +1,16 @@
 .services {
   margin: 0 auto;
   width: 100%;
+  height: 700px; /* Allow content to dictate height */
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #221f45;
   background-position: center;
-  padding: 40px 0;
+  padding: 60px 0; /* Increased vertical padding for more height */
   text-align: center;
 }
+
 
 .services h2 {
   font-size: 36px;
@@ -110,6 +112,60 @@
   background-color: #fff;
   color: #000;
 }
+.swiper-button-prev,
+.swiper-button-next {
+  width: 50px; /* Increase the width of the arrow */
+  height: 50px; /* Increase the height of the arrow */
+  /* background-color: rgba(255, 255, 255, 0.8);  */
+  /* border-radius: 50%;  */
+  color: #ffc000; /* Change the arrow color */
+  font-size: 24px; /* Adjust the arrow size */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+  cursor: pointer;
+  position: absolute;
+  top: 50%; /* Center the arrows vertically */
+  transform: translateY(-50%);
+  z-index: 10;
+}
+
+.swiper-button-prev {
+  left: 0px; /* Push the left arrow further to the left */
+}
+
+.swiper-button-next {
+  right: 0px; /* Push the right arrow further to the right */
+}
+
+/* Add hover effects for the arrows */
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  background-color: #221f45; 
+  color: #000; 
+}
+
+/* Adjusting the pagination dots */
+.swiper-pagination {
+  bottom: -50px; /* Lower the dots below the slider */
+  text-align: center;
+}
+
+.swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #ffc000; /* Change dot color */
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+  margin-top: 20px;
+}
+
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background-color: #ffffff; /* Change active dot color */
+}
+
 
 /* Responsive Design */
 @media (max-width: 970px) {
