--- a/src/components/News/news.css
+++ b/src/components/News/news.css
@@ -8,7 +8,7 @@
 .section-title {
   font-size: 2.5rem;
   margin-top: 10px;
-  margin-bottom: 110px;
+  margin-bottom: 75px;
   color: #fff;
 }
 
@@ -55,6 +55,10 @@
 
 .news-item:hover .news-image {
   transform: scale(1.1);
+}
+
+.news-item:hover .news-button {
+  transform: scale(0.9);
 }
 
 .news-item:hover .news-content {
@@ -104,7 +108,7 @@
 */
 .news-button {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 6px 12px;
   background-color: #ffc000;
   color: #000;
   margin-top: 5px;
@@ -120,8 +124,8 @@
 .more-news-button {
   display: inline-block;
   padding: 10px 20px;
-  margin-top: 110px;
-  margin-bottom: 20px;
+  margin-top: 70px;
+  margin-bottom: 5px;
   background-color: #ffc000;
   color: #000;
   text-decoration: none;
