--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -69,13 +69,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 0px;
-    gap: 10px;
+    margin-left: 10px;
+    
   }
   
   .phone-icon {
     font-size: 24px;
     color: #FFC000;
+    gap: 20px;
  
     
   }
@@ -84,12 +85,14 @@
   .language-buttons button {
     background-color: #FFC000;
     color: rgb(0, 0, 0);
-    padding: 3px 12px;
+    padding: 6px 18px;
     font-size: 10px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    margin-left: 40px;
+    margin-left: 10px;
+    margin-top: 10px;
+  
   }
   
   .language-buttons button:hover {
@@ -127,7 +130,8 @@
     .language-buttons button,
     .notice-button {
       font-size: 10px;
-      padding: 3px 8px;
+      padding: 7px 15px;
+      
     }
   
     .phone-icon {
