--- a/src/pages/Ect/ect.css
+++ b/src/pages/Ect/ect.css
@@ -8,7 +8,6 @@ body {
   .project-development-progress {
     text-align: center;
     color: #333;
-    border: 1px solid red; /* Debug border */
     background-color: lightgray; /* Debug background */
   }
   
@@ -191,7 +190,7 @@ body {
   background: #fff;
   color: #f5af19;
   overflow-x: hidden;
-  padding-bottom: 50px;
+  /* padding-bottom: 50px; */
 }
 
 /* STYLING*/
@@ -323,9 +322,6 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  body {
-    background: #8bfff4;
-  }
   .timeline {
     ul {
       li {
