--- a/src/components/Jctect/jctect.css
+++ b/src/components/Jctect/jctect.css
@@ -4,13 +4,15 @@
   justify-content: center; /* Center the images horizontally */
   align-items: center; /* Align images vertically */
   width: 100%; /* Ensure it spans full width */
-  gap: 15px; /* Space between images */
+  gap: 5px; /* Space between images */
   perspective: 1000px; /* Add perspective for the 3D effect */
+  background-color: #d9d9d9; /* Light background for mobile dropdown */
+    
 }
 
 /* Image container for the 3D effect */
 .image-container {
-  width: 500px; /* Set the width of each image container */
+  width: 600px; /* Set the width of each image container */
   height: 130px; /* Set the height of each image container */
   transform-style: preserve-3d; /* Enable 3D transformations */
   transition: transform 0.6s ease; /* Smooth transition */
