--- a/src/components/Enav/enav.css
+++ b/src/components/Enav/enav.css
@@ -20,7 +20,7 @@
     left: 0;
     width: 100%;
     height: 50%;
-    background: url('../../assets/images/enav.png'); 
+    background: url('../../assets/images/esystem/enav.png'); 
     background-size: cover; 
     background-position: center; 
     opacity: 0.05; 
