--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,3 +1,29 @@
+/* Home Img - Video */
+.hero-container {
+  margin-top: 100px; /* Adjust to prevent overlap with fixed elements like navbar */
+}
+
+.hero-image {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+/* Responsive Adjustments */
+@media (max-width: 768px) {
+  .hero-image {
+    height: 300px; /* Reduce height for small screens */
+  }
+}
+
+@media (max-width: 576px) {
+  .hero-image {
+    height: 200px; /* Further reduce height for extra small screens */
+  }
+}
+
+
+
+/* Guided port button*/
 .responsive-button {
   width: 100%;
   padding: 15px;
@@ -407,3 +433,5 @@ body {
   }
 }
 }
+
+
