--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -163,7 +163,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #f0f4f8; 
+  background: #a2a9af; 
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
