--- a/src/pages/Ect/ect.css
+++ b/src/pages/Ect/ect.css
@@ -16,13 +16,14 @@ body {
   position: relative;
   height: 300px;
   background-color: #001f3f;
+  margin-top: 65px;
 }
 
 .background-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 .hero-content {
@@ -45,7 +46,7 @@ body {
 }
 
 .breadcrumb {
-  color: #ffd700;
+  color: #ffffff
 }
 
 /* Navigation Buttons */
